--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <!-- Зеркала репозиториев, если основной Maven репозиторий не доступен -->
+
   <repositories>
     <repository>
       <id>central</id>
@@ -22,14 +22,14 @@
   </repositories>
 
   <dependencies>
-    <!-- Используйте правильную версию Apache Commons CLI -->
+
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.3.1</version>
     </dependency>
 
-    <!-- Опционально: JUnit для тестирования -->
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -55,7 +55,7 @@
         <configuration>
           <transformers>
             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-              <mainClass>org.shift.Main</mainClass> <!-- Укажите главный класс вашего проекта -->
+              <mainClass>org.shift.Main</mainClass>
             </transformer>
           </transformers>
         </configuration>
